<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.uk.restaurant.GreenVich.activity_fragments.PayMentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/large_size"
            android:textColor="@color/black"
            android:text="@string/welcome_to_payment"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/amount"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:text="@string/amount"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/discount"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/discount"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:text="@string/discount"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/delivery_charge"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_delivery_charge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:text="@string/delivery_charge"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/net_payable"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_total_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/red"
            android:text="@string/net_payable"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/type"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_delivery_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:text="@string/delivery"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/payment_method"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_payment_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:text="@string/online"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_payment"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"
            android:background="@color/checkout"

            android:text="@string/cancel"
            android:textSize="@dimen/small_size"/>

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_confirm_payment"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:background="@color/checkout"
            android:text="@string/confirm"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>
</LinearLayout>
