<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:paddingTop="5dp"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/ll_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/menu_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/menu"
            android:textColor="@color/font_color"
            android:textSize="@dimen/small_size" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_about_us"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/about_us_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/about_us"
            android:gravity="left"
            android:layout_marginRight="2dp"
            android:textColor="@color/font_color"
            android:textSize="@dimen/small_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_contact_us"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/contact_us"
            android:gravity="right"
            android:textColor="@color/font_color"
            android:textSize="@dimen/small_size" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_find_on_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/login"
            />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/logintext"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/find"
            android:textColor="@color/font_color"
            android:textSize="@dimen/small_size" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_check_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/llcheck_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_check_out"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/check_out"
                    android:textColor="@color/font_color"
                    android:textSize="@dimen/small_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/llcheck_out"
                android:textColor="@color/white"
                android:textSize="@dimen/small_size" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
