<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_9001"
    android:orientation="vertical"
    tools:context=".activity_fragments.MapsActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/header" />
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

           <!-- <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.uk.restaurent.papapizza.activity_fragments.MapsActivity" />-->

           <WebView
                android:id="@+id/web_view_on_map1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               android:clickable="false"/>

        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_parent_rounded_corner"
            android:layout_weight="1.3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Baroque"
                        android:typeface="serif"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/contact_us"
                        android:textColor="@color/theme_900"
                        android:textSize="@dimen/middle_size" />

                </LinearLayout>

                <TextView
                    android:translationY="@dimen/cardview_compat_inset_shadow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:padding="2dp"
                    android:text="@string/phone_no"
                    android:textColor="@color/theme_800"
                    android:textSize="@dimen/small_size"/>

                <TextView
                    android:translationY="@dimen/cardview_compat_inset_shadow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:text="http://www.alsplaicebedford.co.uk/"
                    android:padding="2dp"
                    android:textColor="@color/theme_800"
                    android:textSize="@dimen/small_size"
                    android:visibility="visible"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:text="order@alsplaicebedford.co.uk"
                    android:textColor="@color/theme_800"
                    android:padding="2dp"
                    android:translationY="@dimen/cardview_compat_inset_shadow"
                    android:textSize="@dimen/small_size"
                    android:visibility="visible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <TextView
                        style="@style/Baroque"
                        android:typeface="serif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_900"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/location"
                        android:textSize="@dimen/middle_size" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/app_name"
                    android:textColor="@color/theme_800"
                    android:textSize="@dimen/small_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:text="@string/locality"
                    android:textColor="@color/theme_800"
                    android:textSize="@dimen/small_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:text="@string/zip_code"
                    android:textColor="@color/theme_800"
                    android:textSize="@dimen/small_size"/>
            </LinearLayout>

        </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <include layout="@layout/footer_layout" />
    </LinearLayout>
</LinearLayout>
